file organization change and picture updates, content the same just in case in need it

--- a/_posts/2016-06-10-elements.markdown
+++ b/_posts/2016-06-10-elements.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Elements"
 categories: jekyll update
-img: lost-6.jpg
+img: aThreeTeir.jpg
 ---
 Below elements can be used just by adding certain classes to regular html elements. Since the theme is based on [Skeleton](http://getskeleton.com/), you can use any skeleton class in this theme.
 
