fixing a table, changing headings

--- a/_posts/2016-07-07-Weddings.markdown
+++ b/_posts/2016-07-07-Weddings.markdown
@@ -6,8 +6,10 @@ img: UnicornCupcakes.jpg
 categories: one
 ---
 
-<h2>For your Special Day We'll handle the Cake</h2>
+<h3>For your Special Day We'll handle the Cake</h3>
 We've been in the cake business for over 25 years, creating beautiful wedding cakes that taste as great as they look. When planning for your wedding cake, we suggest you [contact]({{site.baseurl}}/contact/) the bakery for a tasting and consulting appointment. We will be happy to assist you in choosing the right size and design as well.
+
+<h4>Flavors and Fillings</h4>
 
 | Flavors      | Fillings              |
 |--------------|-----------------------|
@@ -20,9 +22,10 @@ We've been in the cake business for over 25 years, creating beautiful wedding ca
 | Carrot Cake  | Chocolate Buttercream |
 {: .table .table-striped .table-hover .u-full-width}
 
-<h3>Icing</h3>
+<h4>Icing</h4>
 French Buttercream, Light Whip Buttercream, and for an additional charge Cream Cheese, Rolled Fondant, and White Chocolate
 
+<h4>Size and Cost</h4>
 | Size         | Servings |     Price/Slice |
 |--------------|:--------:|----------------:|
 | 6x9          |    25    |   $112.50/$4.50 |
@@ -42,10 +45,9 @@ We will be happy to arrange your fresh flowers on your cake if desired, ribbons 
 
 These prices are just a guide, more complex designs may cost more, a complimentary anniversary cake provided the first year, call the bakery in advance to order it.
 
-<h3>Delivery Charges</h3>
-| Edmonds $20     | Lynnwood $30              |
-| Seattle $45     | Everett $55            |
-| Woodinville $55 | Marysville $65        |
-| Bellevue $55    | Snohomish $65        |
-
+<h4>Delivery Charges</h4>
+| Edmonds $20     | Lynnwood $30   |
+| Seattle $45     | Everett $55    |
+| Woodinville $55 | Marysville $65 |
+| Bellevue $55    | Snohomish $65  |
 {: .table .table-striped .table-hover .u-full-width}
